2012-03-22 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-io-provider.c (io_providers_list_set_module):
	* src/core/na-updater.c (na_updater_new):
	* src/nact/nact-menubar-file.c (nact_menubar_file_on_update_sensitivities):
	* src/nact/nact-menubar.c (on_base_initialize_window):
	Improve debug messages.

2012-03-12 Pierre Wieser <pwieser@trychlos.org>

	* tools/release-tarball.sh: Fix stable attribute computing.

	* configure.ac: Post release version bump.

2012-03-04 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update before releasing.

	* src/nact/nact-match-list.c (initialize_pseudo_iface): Fix bad display of
	the current selection (selection-changed callback has to be connected from
	window initialization code).

	* src/core/na-icontext.c (is_candidate_for_folders): Improve code
	readability.

	* src/core/na-selected-info.c (dump): Dump file type.

	* src/plugin-menu/nautilus-actions.c (build_nautilus_menu_rec): Improve
	debug messages.

2012-03-01 Pierre Wieser <pwieser@trychlos.org>

	* tools/release-tarball.sh:
	Make sure help and copyright messages display the current version.
	Make sure the tag set in git is consistent with the released tarball.

	Fix #671083 reported by Pierre Wieser - Release tool takes bad package
	version.

2012-02-29 Pierre Wieser <pwieser@trychlos.org>

	* run-distcheck.sh: Exec desktop-file-validate program against
	nact.desktop (see #671043).

	* src/nact/nact.desktop.in: Remove deprecated keys and values.

	Fix #671043 reported by Vincent Untz - Invalid desktop file.

	* All source files:
	* All Makefile.am:
	* All private na-*.m4: Update the license notice according to
	http://www.gnu.org/licenses/gpl-howto.html.

	Fix #671044 reported by Vincent Untz - Incorrect FSF address.
	

2012-02-27 Pierre Wieser <pwieser@trychlos.org>

	Let the example label be expandable.

	* src/nact/nact-icommand-tab.c: No more insert the 'Ex:' prefix.

	* src/nact/nautilus-actions-config-tool.ui: Insert a GtkExpander parent.
